--- a/text.ipynb
+++ b/text.ipynb
@@ -13,10 +13,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вміст файлу:\n",
+      "Tарас Шевченко - найкрутіший український письменник!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'text0.txt'\n",
+    "\n",
+    "try:\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        file_content = file.read()\n",
+    "        print(\"Вміст файлу:\")\n",
+    "        print(file_content)\n",
+    "except FileNotFoundError:\n",
+    "    print(\"error\")\n",
+    "except Exception as e:\n",
+    "    print(\"error\", e)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -27,10 +49,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Повідомлення з файлу text1.txt:\n",
+      "Привіт! Я учень 8 класу.\n",
+      "У мене дуже погані оцінки.\n",
+      "Але я постійно працюю над собою\n",
+      "і незабаром буду вчитися краще!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'text1.txt'\n",
+    "\n",
+    "try:\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        file_content = file.read()\n",
+    "        print(\"Повідомлення з файлу {}:\".format(file_path))\n",
+    "        print(file_content)\n",
+    "except FileNotFoundError:\n",
+    "    print(\"error{}\".format(file_path))\n",
+    "except Exception as e:\n",
+    "    print(\"error\", e)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,7 +97,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file_path = 'text1.txt'\n",
+    "\n",
+    "new_lines = [\n",
+    "    \"Але я постійно працюю над собою\\n\",\n",
+    "    \"і незабаром буду вчитися краще!\\n\"\n",
+    "]\n",
+    "\n",
+    "try:\n",
+    "    with open(file_path, 'a', encoding='utf-8') as file:\n",
+    "        file.writelines(new_lines)\n",
+    "\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        file_content = file.read()\n",
+    "        print(\"Зміст файлу {} після додавання нових рядків:\".format(file_path))\n",
+    "        print(file_content)\n",
+    "\n",
+    "except FileNotFoundError:\n",
+    "    print(\"error{}\".format(file_path))\n",
+    "except Exception as e:\n",
+    "    print(\"error\", e)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -68,10 +136,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Серед характеристик робіт учня у файлі text2.txt є значення 'відмінно'\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = 'text2.txt'\n",
+    "target_word = \"відмінно\"\n",
+    "\n",
+    "try:\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        file_content = file.read()\n",
+    "        if target_word in file_content:\n",
+    "            print(\"Серед характеристик робіт учня у файлі {} є значення '{}'\".format(file_path, target_word))\n",
+    "        else:\n",
+    "            print(\"У файлі {} відсутні значення '{}' серед характеристик робіт учня.\".format(file_path, target_word))\n",
+    "except FileNotFoundError:\n",
+    "    print(\"error{}\".format(file_path))\n",
+    "except Exception as e:\n",
+    "    print(\"error\", e)\n"
+   ]
   }
  ],
  "metadata": {
